# deep-research-agents

./: .env.sample  .gitignore  README.md  main.py  prompt.py  pyproject.toml
tools/: files.py  scrape.py  search.py
