[project]
name = "deep-research-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.15",
    "autogen-core>=0.7.4",
    "autogen-ext[azure]>=0.7.4",
    "dotenv>=0.9.9",
    "python-dotenv>=1.1.1",
]
